proj1/tests/other-tests/minz-tests/correct/chain_compare.py
for x in range(10):
    if 3 < x < 9 < 10:
        print(x)
