proj1/tests/other-tests/minz-tests/error/fn_in_iteration.py
# functions defined in if, for, or while
def in_iteration(a, b, c):
    if x == 3:
        def myfn(): pass
    else:
        for i in range(10):
            def myfn2(): pass
        while False:
            def myfn3(): pass